# BoundedModelChecker

./: LICENSE  MonadicConstraintProgramming.cabal  README.md  stack.yaml
.github/workflows/: Haskell-CI.yaml
src/: BoundedSolver.hs  BoundedTree.hs  ComposableTransformers.hs  FD.hs  LogicAssambler.hs  NQueens.hs  Queue.hs  Relations.hs  Sets.hs  Simple.hs  Solver.hs  Transformers.hs  Tree.hs  TreeSolver.hs  TreeSugar.hs
src/Language/CP/: ComposableTransformers.hs  Domain.hs  FD.hs  FDSugar.hs  PriorityQueue.hs  Queue.hs  SearchTree.hs  Solver.hs  Transformers.hs
test/: NQueensSpec.hs
