name:                MonadicConstraintProgramming
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Entze/MonadicConstraintProgramming#readme
license:             BSD3
license-file:        LICENSE
author:              Lukas Grassauer
maintainer:          lukas@grassauer.eu
copyright:           Lukas Grassauer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.CP.Domain
                     , Language.CP.FD
                     , Language.CP.Solver
                     , Language.CP.FDSugar
                     , Language.CP.PriorityQueue
                     , Language.CP.SearchTree
                     , Language.CP.Transformers
                     , Language.CP.Queue
                     , Language.CP.ComposableTransformers
                     , NQueens
  build-depends:       base >= 4 && < 5
                     , containers >= 0.5 && < 1
                     , mtl >= 2.1 && < 3
                     , random >= 1.0 && < 2
  default-language:    Haskell2010

executable MonadicConstraintProgramming
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MonadicConstraintProgramming
  default-language:    Haskell2010

test-suite MonadicConstraintProgramming-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , MonadicConstraintProgramming
                     , hspec
                     , QuickCheck
  build-tool-depends:  hspec-discover:hspec-discover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Entze/MonadicConstraintProgramming
